--- a/src/app/dynamicForms/dynamic-form-question.component.html
+++ b/src/app/dynamicForms/dynamic-form-question.component.html
@@ -1,16 +1,19 @@
-<div [formGroup]="form">
-  <label [attr.for]="question.key">{{question.label}}</label>
-
+<div class="errorMessage" *ngIf="!isValid">{{question.label}} is required</div>
+<div [formGroup]="form" class="example-container">  
   <div [ngSwitch]="question.controlType">
-
-    <input *ngSwitchCase="'textbox'" [formControlName]="question.key"
-            [id]="question.key" [type]="question.type">
-
-    <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
-      <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
-    </select>
-
+    <span class="example-container" *ngSwitchCase="'starrating'">
+      <p class="centered">{{question.label}}</p>
+      <bar-rating [formControlName]="question.key" [id]="question.key" [(rate)]="rate" [max]="question.max" [theme]="'vertical'" [showText]="true" [titles]="question.options"></bar-rating>
+    </span>
+    <mat-form-field *ngSwitchCase="'textbox'" appearance="outline">
+      <mat-label [attr.for]="question.key" mat-label>{{question.label}}</mat-label>
+      <input matInput [type]="question.type" [id]="question.key" [formControlName]="question.key">
+    </mat-form-field>
+    <mat-form-field [id]="question.key" *ngSwitchCase="'dropdown'">
+      <mat-label [attr.for]="question.key" mat-label>{{question.label}}</mat-label>
+      <mat-select [formControlName]="question.key">
+        <mat-option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</mat-option>
+      </mat-select>
+    </mat-form-field>
   </div> 
-
-  <div class="errorMessage" *ngIf="!isValid">{{question.label}} is required</div>
 </div>
