--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,1 +1,3 @@
-<p>filter works!</p>
+<mat-checkbox [(ngModel)]="Jira">Jira</mat-checkbox>
+
+<!-- ajouter un sélecteur de chiffre pour le nombre de sessions affichées -->
