affichage du nombre de résultat + header avec image

--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,5 +1,19 @@
 
 .nav-bar
   box-shadow: 0px 4px 5px rgba(0,0,0,0.3)
+  display: flex
+  flex-wrap: wrap
+  align-items: center
+  padding: 8px 16px
+  color : white
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  z-index: 50
 
-.profil
+.flex-spacer
+  flex-grow: 1
+
+.header_image
+  height: 50px
