--- a/src/app/create-session/create-session.component.html
+++ b/src/app/create-session/create-session.component.html
@@ -1,6 +1,6 @@
 <p>create-session works!</p>
 <div class="create">
-  <mat-vertical-stepper linear #stepper>
+  <mat-vertical-stepper background-color="secondary" linear #stepper>
     <mat-step [stepControl]="firstFormGroup" color="red">
       <form [formGroup]="firstFormGroup">
         <ng-template matStepLabel>Titre Session</ng-template>
