--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,4 +1,4 @@
-<div class="example-container">
+<div class="example-container alternative">
   <mat-card>
     <div class="row">
       <div class="col-md-4 offset-md-2">
@@ -36,8 +36,8 @@
       </div>
       <div class="col-md-3 offset-md-9">
         <mat-card-actions>
-          <button mat-button class="green">Sauvegarder</button>
-          <button mat-button class="red">Annuler</button>
+          <button mat-raised-button color="primary" class="">Sauvegarder</button>
+          <button mat-raised-button color="accent" class="">Annuler</button>
         </mat-card-actions>
       </div>
     </div>
