--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,18 +3,18 @@
 
 $my-app-primary: mat-palette($mat-red, 900);
 $my-app-secondary: mat-palette($mat-purple, 800);
-$my-app-accent:  mat-palette($mat-purple, 800);
-$my-app-warn:    mat-palette($mat-deep-orange);
+$my-app-accent: mat-palette($mat-purple, 800);
+$my-app-warn: mat-palette($mat-deep-orange);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 @include angular-material-theme($my-app-theme);
 
-$dark-primary: mat-palette($mat-red, 900, 500, 900);
-$dark-accent:  mat-palette($mat-amber, A200, A100, A400);
-$dark-warn:    mat-palette($mat-deep-orange);
-$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+$alt-primary: mat-palette($mat-purple, 800);
+$alt-accent: mat-palette($mat-red, 900);
+$alt-warn: mat-palette($mat-deep-orange);
+$alt-theme: mat-light-theme($alt-primary, $alt-accent, $alt-warn);
 
-.dark-theme {
-   @include angular-material-theme($dark-theme);
+.alternative {
+  @include angular-material-theme($alt-theme);
 }
