p 404 et début footer

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,10 @@
 <div class="notFound">
-  <h2>Page introuvable</h2>
-
-  <div>
-    <button mat-button routerLink="">Retourner à l'acceuil!</button>
+  <h2 class="erreur">Erreur 404: Page introuvable</h2>
+  <img src="..\..\assets\images\minion.png" alt="404 image">
+  <h3>C'est encore la faute de l'alternant...</h3>
+  <br>
+  <div class="bouton-home">
+    <button mat-raised-button routerLink="" color='primary'>Retourner à l'acceuil!</button>
   </div>
+  <br>
 </div>
