--- a/src/app/dynamicForms/dynamic-form.component.html
+++ b/src/app/dynamicForms/dynamic-form.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="form-row">
-      <button mat-raised-button color="warn" type="submit" [disabled]="!form.valid">Save</button>
+      <button mat-raised-button color="warn" type="submit" [disabled]="!form.valid">à supprimer</button>
     </div>
   </form>
 
