--- a/src/app/create-profil/create-profil.component.html
+++ b/src/app/create-profil/create-profil.component.html
@@ -1,4 +1,4 @@
-<div class="create alternative">
+<div class="create ">
   <mat-vertical-stepper linear #stepper>
     <mat-step [stepControl]="firstFormGroup">
       <form [formGroup]="firstFormGroup">
