--- a/src/app/card-module/card-module.component.html
+++ b/src/app/card-module/card-module.component.html
@@ -4,6 +4,8 @@
     <h4>
       <ngb-rating max=3 [readonly]="true" [(rate)]="module.level"></ngb-rating>
     </h4>
+    <h5>{{module.titre}}</h5>
+    <br>
     <p>
       {{module.description}}
     </p>
