carte détail session plus questions

--- a/src/app/card-module/card-module.component.html
+++ b/src/app/card-module/card-module.component.html
@@ -11,6 +11,6 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="openDialog()">Choisir</button>
+    <button mat-raised-button color="primary" [routerLink]="['detail',module.id]">Choisir</button>
   </mat-card-actions>
 </mat-card>
