--- a/src/app/module-learning/detail-module/detail-module.component.sass
+++ b/src/app/module-learning/detail-module/detail-module.component.sass
@@ -1,2 +1,22 @@
 .detail-Module
   margin-top: 70px
+
+// Onglet description
+
+.titre
+  text-align: center
+  margin-top: 1%
+
+.img
+  margin-top: 1%
+  text-align: center
+
+.description
+  margin-top: 1%
+
+// Onglet sessions
+.sessions
+  margin-top: 1%
+
+.filters
+
