--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -1,13 +1,54 @@
 <div class="alternative detail-Module">
   <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Description">
-
+      <h2 class="titre">{{Module.titre}}</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 img">
+            <img class="img-fluid" src="{{Module.img}}" alt="image session">
+          </div>
+          <div class="description col-md-8 offset-2">
+            {{Module.description}}
+          </div>
+        </div>
+      </div>
     </mat-tab>
     <mat-tab label="Teste">
       <app-dynamic-form [questions]="questions"></app-dynamic-form>
     </mat-tab>
     <mat-tab label="Sessions">
-
+      <div class="container">
+        <div class="row sessions">
+          <div class="col-md-6 filters">
+            <mat-form-field>
+              <input matInput [matDatepicker]="debut" placeholder="Date de début" [formControl]="date_debut">
+              <mat-datepicker-toggle matSuffix [for]="debut"></mat-datepicker-toggle>
+              <mat-datepicker #debut></mat-datepicker>
+            </mat-form-field>
+            <br>
+            <mat-form-field>
+              <input matInput [matDatepicker]="fin" placeholder="Date de fin" [formControl]="date_fin">
+              <mat-datepicker-toggle matSuffix [for]="fin"></mat-datepicker-toggle>
+              <mat-datepicker #fin></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="col-md-6">
+            <mat-list>
+              <mat-list-item *ngFor="let session of Module.sessions, last as last">
+              <!-- <mat-list-item *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last"> -->
+                <div class="col" >
+                  <h6>{{session.date | date:'HH:mm, EEEE d MMMM y':undefined :"fr"}}</h6>
+                </div>
+                <div class="col">
+                  <button mat-raised-button color="primary" (click)="openDialog()">Plus
+                    d'informtaions</button>
+                </div>
+                <mat-divider *ngIf="!last"></mat-divider>
+              </mat-list-item>
+            </mat-list>
+          </div>
+        </div>
+      </div>
     </mat-tab>
   </mat-tab-group>
 </div>
