--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!--/.Navbar-->
-<mat-toolbar class="nav-bar-bottom" color="primary">
+<!-- <mat-toolbar class="nav-bar-bottom" color="primary">
   <div>
-    <!-- <img src="../../assets/images/white-angular.png" alt="angular"> -->
+   
   </div>
   <div class="flex-spacer"></div>
-</mat-toolbar>
+</mat-toolbar> -->
