--- a/src/app/sujet/sujet.component.html
+++ b/src/app/sujet/sujet.component.html
@@ -14,10 +14,13 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Offres learning Factory:</h1>
+      <br>
     </div>
-    <div class="carousel-manual-item col-md-3 offset-1" *ngFor="let item of (Sujets | topicFilters : sujetCtrl.value)">
-      <button mat-raised-button matTooltip="Cliquez moi!" (click)="goToModule(item.sujet)">
-        <img src="{{item.img}}" alt="Photo of sujet">
+  </div>
+  <div class="row">
+    <div class=" col-sm-3 offset-1" *ngFor="let item of (Sujets | topicFilters : sujetCtrl.value)">
+      <button mat-raised-button matTooltip=" Cliquez moi!" (click)="goToModule(item.sujet)">
+        <img src="{{item.img}}" class="images" alt="Photo of sujet">
         <div>
           <h4>{{item.sujet}}</h4>
           <p>
@@ -27,4 +30,5 @@
       </button>
     </div>
   </div>
+
 </div>
