affichage conditionnel des sessions
si pas de sessions alors message d'information

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
       routerLink="">
     <button mat-button [matMenuTriggerFor]="menu">Menu</button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item routerLink="sessions">Rejoindre une session</button>
+      <button mat-menu-item routerLink="sujets">Rejoindre une session</button>
       <button mat-menu-item routerLink="mySession">Mes Sessions</button>
       <button mat-menu-item routerLink="createSession">Créer une session</button>
     </mat-menu>
