--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -13,13 +13,14 @@
         </div>
       </div>
     </mat-tab>
-    <mat-tab label="Teste">
+    <mat-tab *ngIf="questions != 0" label="Test">
       <app-dynamic-form [questions]="questions"></app-dynamic-form>
     </mat-tab>
     <mat-tab label="Sessions">
       <div class="container">
         <div class="row sessions">
           <div class="col-md-6 filters">
+            <h5>Filtres :</h5>
             <mat-form-field>
               <input matInput [matDatepicker]="debut" placeholder="Date de début" [formControl]="date_debut">
               <mat-datepicker-toggle matSuffix [for]="debut"></mat-datepicker-toggle>
@@ -33,16 +34,24 @@
             </mat-form-field>
           </div>
           <div class="col-md-6">
-            <mat-list>
-              <mat-list-item *ngFor="let session of Module.sessions, last as last">
-              <!-- <mat-list-item *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last"> -->
-                <app-card-sessions [session]="session"></app-card-sessions>
-                <mat-divider *ngIf="!last"></mat-divider>
-              </mat-list-item>
-            </mat-list>
+            <div *ngIf="Module.sessions != 0; else elseTemplate">
+              <h4>Liste des sessions</h4>
+              <mat-list>
+                <mat-list-item *ngFor="let session of Module.sessions, last as last">
+                  <!-- <mat-list-item *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last"> -->
+                  <app-card-sessions [session]="session" class="col"></app-card-sessions>
+                  <mat-divider *ngIf="!last"></mat-divider>
+                </mat-list-item>
+              </mat-list>
+            </div>
           </div>
         </div>
       </div>
     </mat-tab>
   </mat-tab-group>
 </div>
+<ng-template #elseTemplate>
+  <div>
+    il n'existe pas encore de session pour ce module.
+  </div>
+</ng-template>
