--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -11,6 +11,7 @@
             {{Module.description}}
           </div>
         </div>
+        <button mat-raised-button onclick="history.go(-1)" color="primary">Retour</button>
       </div>
     </mat-tab>
     <mat-tab *ngIf="questions != 0" label="Test">
