--- a/src/app/module-learning/detail-module/detail-module.component.sass
+++ b/src/app/module-learning/detail-module/detail-module.component.sass
@@ -16,7 +16,23 @@
 
 // Onglet sessions
 .sessions
-  margin-top: 1%
+  margin-top: 10%
 
 .filters
 
+.dateSelector
+  margin-top: 10%
+
+.listSessions
+  margin-top: 10%
+  overflow-y: auto
+  max-height: 300px
+
+  /* WebKit and Blink */
+::-webkit-scrollbar 
+  width: 6px
+  cursor: pointer
+
+::-webkit-scrollbar-thumb 
+  background: rgba(0, 0, 0, 0.5)
+  border-radius: 4px
