--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,8 @@
 <!--/.Navbar-->
-<!-- <mat-toolbar class="nav-bar-bottom" color="primary">
-  <div>
-   
-  </div>
-  <div class="flex-spacer"></div>
-</mat-toolbar> -->
+<!-- <footer>
+  <mat-toolbar class="nav-bar-bottom" color="primary">
+    <div>   
+    </div>
+    <div class="flex-spacer"></div>
+  </mat-toolbar>
+</footer> -->
