--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -1,58 +1,61 @@
-<div class="alternative detail-Module">
-  <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Description">
-      <h2 class="titre">{{Module.titre}}</h2>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 img">
-            <img class="img-fluid" src="{{Module.img}}" alt="image session">
-          </div>
-          <div class="description col-md-8 offset-2">
-            {{Module.description}}
-          </div>
-        </div>
-        <button mat-raised-button onclick="history.go(-1)" color="primary">Retour</button>
-      </div>
-    </mat-tab>
-    <mat-tab *ngIf="questions != 0" label="Test">
-      <app-dynamic-form [questions]="questions"></app-dynamic-form>
-    </mat-tab>
-    <mat-tab label="Sessions">
-      <div class="container">
-        <div class="row sessions">
-          <div class="col-md-6 filters">
-            <h5>Filtres :</h5>
-            <mat-form-field class="dateSelector">
-              <input matInput [matDatepicker]="debut" placeholder="Date de début" [formControl]="date_debut">
-              <mat-datepicker-toggle matSuffix [for]="debut"></mat-datepicker-toggle>
-              <mat-datepicker #debut></mat-datepicker>
-            </mat-form-field>
-            <br>
-            <mat-form-field>
-              <input matInput [matDatepicker]="fin" placeholder="Date de fin" [formControl]="date_fin">
-              <mat-datepicker-toggle matSuffix [for]="fin"></mat-datepicker-toggle>
-              <mat-datepicker #fin></mat-datepicker>
-            </mat-form-field>
-          </div>
-          <div class="col-md-6">
-            <div *ngIf="Module.sessions != 0; else elseTemplate">
-              <h4>Liste des sessions</h4>
-              <mat-list class="listSessions">
-                <mat-list-item *ngFor="let session of Module.sessions, last as last">
-                  <!-- <mat-list-item *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last"> -->
-                  <app-card-sessions [session]="session" class="col"></app-card-sessions>
-                  <mat-divider *ngIf="!last"></mat-divider>
-                </mat-list-item>
-              </mat-list>
+<div class=" alternative detail-Module">
+  <div class="container-fluid">
+    <button mat-raised-button class="col-1" onclick="history.go(-1)" color="primary">Retour</button>
+    <button mat-button [routerLink]="['/sujets']">{{Module.sujet}}</button>
+    <button mat-button onclick="history.go(-1)"><ngb-rating max=3 [readonly]="true" [(rate)]="Module.level"></ngb-rating></button>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col" label="Description">
+        <h2 class="titre">{{Module.titre}}</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 img">
+              <img class="img-fluid" src="{{Module.img}}" alt="image session">
+            </div>
+            <div class="description col-md-8 offset-2">
+              {{Module.description}}
             </div>
           </div>
         </div>
       </div>
-    </mat-tab>
-  </mat-tab-group>
-</div>
-<ng-template #elseTemplate>
-  <div>
-    il n'existe pas encore de session pour ce module.
+      <!-- <mat-tab *ngIf="questions != 0" label="Test">
+        <app-dynamic-form [questions]="questions"></app-dynamic-form>
+      </mat-tab> -->
+      <div class="col" label="Sessions">
+        <div class="">
+          <div class="sessions">
+            <div class="">
+              <div *ngIf="Module.sessions != 0; else elseTemplate">
+                <h4>Liste des sessions</h4>
+                <div class="row">
+                  <mat-form-field class="col">
+                    <input matInput [matDatepicker]="debut" placeholder="Date de début" [formControl]="date_debut">
+                    <mat-datepicker-toggle matSuffix [for]="debut"></mat-datepicker-toggle>
+                    <mat-datepicker #debut></mat-datepicker>
+                  </mat-form-field>
+                  <mat-form-field class="col">
+                    <input matInput [matDatepicker]="fin" placeholder="Date de fin" [formControl]="date_fin">
+                    <mat-datepicker-toggle matSuffix [for]="fin"></mat-datepicker-toggle>
+                    <mat-datepicker #fin></mat-datepicker>
+                  </mat-form-field>
+                  <mat-list class="listSessions">
+                    <mat-list-item *ngFor="let session of Module.sessions, last as last">
+                      <!-- <mat-list-item *ngFor="let session of (Module.sessions| filterDatePipe: date_debut.value: date_fin.value), last as last"> -->
+                      <app-card-sessions [session]="session" class="col"></app-card-sessions>
+                      <mat-divider *ngIf="!last"></mat-divider>
+                    </mat-list-item>
+                  </mat-list>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</ng-template>
+  <ng-template #elseTemplate>
+    <div>
+      il n'existe pas encore de session pour ce module.
+    </div>
+  </ng-template>
