--- a/src/app/module-learning/module-learning.component.html
+++ b/src/app/module-learning/module-learning.component.html
@@ -1,26 +1,34 @@
 <div class="module alternative">
   <div class="filtres" *ngIf="Modules.length != 0; else elseTemplate">
     <div class="container-fluid">
-      <button mat-raised-button class="col-md-1 offset-3" [routerLink]="['../']" color="primary">Retour</button>
-      <mat-form-field class="offset-4">
-        <mat-select placeholder="Niveau" [formControl]="levels">
-          <mat-select-trigger color="primary">
-            <ngb-rating max=3 [readonly]="true" [(rate)]="levels.value"></ngb-rating>
-          </mat-select-trigger>
-          <mat-option [value]="">Tous</mat-option>
-          <mat-option *ngFor="let level of levelList" [value]="level">
-            <ngb-rating max=3 [readonly]="true" [(rate)]="level"></ngb-rating>
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <div class="row">
+        <div class="col-1">
+          <button mat-raised-button [routerLink]="['../']" class="col-1" color="primary">Retour</button>
+        </div>
+        <div class="col-md-1">
+            <button mat-button [routerLink]="['/sujets']">{{sujet}}</button>
+        </div>
+        <mat-form-field class="col-md-2 offset-2">
+          <mat-select placeholder="Niveau" [formControl]="levels">
+            <mat-select-trigger color="primary">
+              <ngb-rating max=3 [readonly]="true" [(rate)]="levels.value"></ngb-rating>
+            </mat-select-trigger>
+            <mat-option [value]="">Tous</mat-option>
+            <mat-option *ngFor="let level of levelList" [value]="level">
+              <ngb-rating max=3 [readonly]="true" [(rate)]="level"></ngb-rating>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
     </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="carousel-manual-item col-md-4" *ngFor="let item of (Modules | levelPipe : levels.value )">
+      <div class="carousel-manual-item col-4" *ngFor="let item of (Modules | levelPipe : levels.value )">
         <app-card-module [module]="item"></app-card-module>
       </div>
     </div>
   </div>
-
   <ng-template #elseTemplate>
     <div>
       il n'existe pas encore de module pour ce sujet.
