résolution bug affichage

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,7 @@
         <button mat-menu-item routerLink="sujets">Rejoindre une session</button>
         <button mat-menu-item routerLink="mySession">Mes Sessions</button>
         <button mat-menu-item routerLink="createSession">Créer une session</button>
+        <button mat-menu-item routerLink="demandes">Liste des demandes</button>
       </mat-menu>
     </div>
     <div class="flex-spacer"></div>
