--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="corp">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
