--- a/src/app/card-module/card-module.component.html
+++ b/src/app/card-module/card-module.component.html
@@ -10,10 +10,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary" [routerLink]="['detail',module.id]" matTooltip=" Cliquez moi!" *ngIf="module.sessions.length !=0, else createSession">Choisir</button>
+    <button mat-raised-button color="primary" [routerLink]="['detail',module.id]" matTooltip=" Cliquez moi!">Choisir</button>
   </mat-card-actions>
 </mat-card>
 
-<ng-template #createSession>
-  <div class="alert alert-danger">Désolé, Il n'existe pas de sessions pour ce module. Demander la création d'une session.</div>
-<button mat-raised-button color="accent" matTooltip=" Demander la création d'une session">Soumettre</button></ng-template>
