--- a/src/app/module-learning/detail-module/detail-module.component.sass
+++ b/src/app/module-learning/detail-module/detail-module.component.sass
@@ -1,6 +1,3 @@
-.detail-Module
-  margin-top: 70px
-
 // Onglet description
 
 .titre
@@ -36,3 +33,9 @@
 ::-webkit-scrollbar-thumb 
   background: rgba(0, 0, 0, 0.5)
   border-radius: 4px
+
+// Retour
+.retour 
+  position: sticky
+  top: 100%
+  left: 5%
