--- a/src/app/module-learning/module-learning.component.html
+++ b/src/app/module-learning/module-learning.component.html
@@ -3,12 +3,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-1">
-          <button mat-raised-button [routerLink]="['../']"  color="primary">Retour</button>
+          <button mat-button [routerLink]="['/sujets']">{{sujet}}</button>
         </div>
-        <div class="col-md-1">
-            <button mat-button [routerLink]="['/sujets']">{{sujet}}</button>
-        </div>
-        <mat-form-field class="col-md-2 offset-3">
+        <mat-form-field class="col-md-2 offset-4">
           <mat-select placeholder="Niveau" [formControl]="levels">
             <mat-select-trigger color="primary">
               <ngb-rating max=3 [readonly]="true" [(rate)]="levels.value"></ngb-rating>
@@ -28,6 +25,9 @@
         <app-card-module [module]="item"></app-card-module>
       </div>
     </div>
+  </div>
+  <div class="col-md-1 retour">
+    <button mat-raised-button [routerLink]="['../']" color="primary">Retour</button>
   </div>
   <ng-template #elseTemplate>
     <div>
