--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -1,6 +1,6 @@
 <div class=" alternative detail-Module">
   <div class="container-fluid">
-    <button mat-button [routerLink]="['/sujets']">{{Module.sujet}}</button>
+    <button mat-button [routerLink]="['/sujets']">{{Module.sujet}} ></button>
     <button mat-button onclick="history.go(-1)">
       <ngb-rating max=3 [readonly]="true" [(rate)]="Module.level"></ngb-rating>
     </button>
