--- a/src/app/module-learning/detail-module/detail-module.component.html
+++ b/src/app/module-learning/detail-module/detail-module.component.html
@@ -14,7 +14,7 @@
             <div class="col-md-12 img">
               <img class="img-fluid" src="{{Module.img}}" alt="image session">
             </div>
-            <div class="description col-md-8 offset-2">
+            <div class="description col-md-8 offset-2  text-justify">
               {{Module.description}}
             </div>
           </div>
