--- a/src/app/dynamicForms/dynamic-form.component.html
+++ b/src/app/dynamicForms/dynamic-form.component.html
@@ -1,13 +1,13 @@
-<div>
+<div class="container-fluid">
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
 
-    <div *ngFor="let question of questions" class="form-row">
-      <app-question [question]="question" [form]="form"></app-question>
+    <div *ngFor="let question of questions" class="form-group row">
+      <app-question [question]="question" class="col-12" [form]="form"></app-question>
     </div>
 
-    <div class="form-row">
-      <button mat-raised-button color="warn" type="submit" [disabled]="!form.valid">Sauvegarder</button>
-    </div>
+    <!-- <div class="form-row">
+      <button mat-raised-button class="" type="submit" [disabled]="!form.valid">Sauvegarder</button>
+    </div> -->
   </form>
 
   <div *ngIf="payLoad" class="form-row">
