--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,17 +1,19 @@
-<div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
-    <h2>Se Connecter</h2>
-    <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="email">Adresse mail</label>
-        <input type="text" id="email" class="form-control" formControlName="email">
-      </div>
-      <div class="form-group">
-        <label for="password">Mot de passe</label>
-        <input type="password" id="password" class="form-control" formControlName="password">
-      </div>
-      <button class="btn btn-primary" type="submit" [disabled]="signinForm.invalid">Se connecter</button>
-    </form>
-    <p class="text-danger">{{ errorMessage }}</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-2 offset-5 connexion">
+      <h2>Se Connecter</h2>
+      <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <input matInput placeholder="Email" value="{{user.email}}" [formControl]="email" required>
+              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+        </div>
+        <div class="form-group">
+          <label for="password">Mot de passe</label>
+          <input type="password" id="password" class="form-control" formControlName="password">
+        </div>
+        <button mat-raised-button  type="submit" [disabled]="signinForm.invalid">Se connecter</button>
+      </form>
+      <p class="alert alert-danger" role="alert" *ngIf="errorMessage">{{ errorMessage }}</p>
+    </div>
   </div>
 </div>
