--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <div class="row">
       <div class="col-md-4 offset-md-2">
-        <img mat-card-lg-image src="{{user.default.avatar}}">
+        <img mat-card-lg-image src="{{user.photoURL}}">
         <br>
         <br>
         <form>
@@ -13,22 +13,18 @@
         </form>
       </div>
       <div class="col-md-3 offset-md-3">
+        <br>
         <mat-list>
           <mat-list-item>
             <mat-form-field>
-              <input matInput placeholder="Nom" value="{{user.default.firstName}}" required>
+              <input matInput placeholder="Nom" value="{{user.displayName}}" required [formControl]="Name">
               <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
             </mat-form-field>
           </mat-list-item>
+          <br>
           <mat-list-item>
             <mat-form-field>
-              <input matInput placeholder="Prénom" value="{{user.default.lastName}}" required>
-              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-            </mat-form-field>
-          </mat-list-item>
-          <mat-list-item>
-            <mat-form-field>
-              <input matInput placeholder="Email" value="{{user.default.email}}" [formControl]="email" required>
+              <input matInput placeholder="Email" value="{{user.email}}" [formControl]="email" required>
               <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
             </mat-form-field>
           </mat-list-item>
@@ -36,7 +32,7 @@
       </div>
       <div class="col-md-3 offset-md-9">
         <mat-card-actions>
-          <button mat-raised-button color="primary" class="">Sauvegarder</button>
+          <button mat-raised-button color="primary" (click)="updateProfile()">Sauvegarder</button>
           <button mat-raised-button color="accent" class="">Annuler</button>
         </mat-card-actions>
       </div>
